<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/menu_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.cdtsp.settings.view.MenuButton
                android:id="@+id/system"
                style="@style/MenuButtonStyle"
                app:text="@string/system"
                app:drawable="@drawable/selector_system_img"
                />
            <com.cdtsp.settings.view.MenuButton
                android:id="@+id/display"
                style="@style/MenuButtonStyle"
                app:text="@string/display"
                app:drawable="@drawable/selector_display_img"
                />
            <com.cdtsp.settings.view.MenuButton
                android:id="@+id/sound"
                style="@style/MenuButtonStyle"
                app:text="@string/audio"
                app:drawable="@drawable/selector_sound_img"
                />
            <com.cdtsp.settings.view.MenuButton
                android:id="@+id/network"
                style="@style/MenuButtonStyle"
                app:text="@string/networks"
                app:drawable="@drawable/selector_network_img"
                />
            <com.cdtsp.settings.view.MenuButton
                android:id="@+id/bt"
                style="@style/MenuButtonStyle"
                app:text="@string/bluetooth"
                app:drawable="@drawable/selector_bt_img"
                />
            <com.cdtsp.settings.view.MenuButton
                android:id="@+id/personal"
                style="@style/MenuButtonStyle"
                app:text="@string/customize"
                app:drawable="@drawable/selector_personal_img"
                />
            <com.cdtsp.settings.view.MenuButton
                android:id="@+id/upgrade"
                style="@style/MenuButtonStyle"
                app:text="@string/upgrade"
                app:drawable="@drawable/selector_upgrade_img"
                />
            <com.cdtsp.settings.view.MenuButton
                android:id="@+id/data_flow"
                style="@style/MenuButtonStyle"
                app:text="@string/mobile_data"
                app:drawable="@drawable/selector_data_flow_img"
                />
            <com.cdtsp.settings.view.MenuButton
                android:id="@+id/user_feedback"
                style="@style/MenuButtonStyle"
                app:text="@string/user_feedback"
                app:drawable="@drawable/selector_user_feedback_img"
                />
            <com.cdtsp.settings.view.MenuButton
                android:id="@+id/about"
                style="@style/MenuButtonStyle"
                app:text="@string/about"
                app:drawable="@drawable/selector_about_img"
                />
            <com.cdtsp.settings.view.MenuButton
                android:id="@+id/reset"
                style="@style/MenuButtonStyle"
                app:text="@string/fdr"
                app:drawable="@drawable/selector_reset_img"
                />
        </LinearLayout>
    </ScrollView>
    <View
        android:layout_width="14dp"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_gravity="right"
        android:background="@drawable/layer_list_seperator_2"
        />
</LinearLayout>