<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="85dp">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="80dp"
        android:paddingRight="50dp"
        android:paddingTop="25dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/content_text_size"
            android:text="@string/choose_a_function"
            />
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radio_sys"
                style="@style/RadioButtonStyle"
                android:text="@string/system"/>
            <RadioButton
                android:id="@+id/radio_media"
                style="@style/RadioButtonStyle"
                android:text="@string/multi_media"/>
            <RadioButton
                android:id="@+id/radio_navi"
                style="@style/RadioButtonStyle"
                android:text="@string/navigation"/>
            <RadioButton
                android:id="@+id/radio_bt"
                style="@style/RadioButtonStyle"
                android:text="@string/bluetooth"/>
            <RadioButton
                android:id="@+id/radio_others"
                style="@style/RadioButtonStyle"
                android:text="@string/other"/>
        </RadioGroup>
    </LinearLayout>

    <include layout="@layout/settings_line_devide_v"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:paddingLeft="50dp"
        android:paddingRight="260dp"
        android:paddingTop="25dp"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@android:color/black"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/content_text_size"
                android:text="@string/complaints"
                />
            <ImageView
                android:id="@+id/send"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/settings_feedback_send"
                android:scaleType="center"
                android:background="@drawable/selector_flow_btn"
                />
        </RelativeLayout>
        <EditText
            style="@style/EditTextStyle"
            android:hint="@string/hint1"
            android:background="@drawable/settings_feedback_bg_editor_phone"
            android:maxLines="1"
            />
        <EditText
            style="@style/EditTextStyle"
            android:hint="@string/hint2"
            android:background="@drawable/settings_feedback_bg_editor"
            android:maxLength="140"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:gravity="top"
            />
        <ImageView
            android:id="@+id/voice"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/settings_feedback_voice"
            />
    </LinearLayout>

</LinearLayout>