<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            >
            <com.cdtsp.settings.view.TextViewTag
                android:id="@+id/tv_tag_usb"
                style="@style/TitleTextStyle"
                android:text="@string/usb_upgrade"
                />
            <com.cdtsp.settings.view.TextViewTag
                android:id="@+id/tv_tag_wlan"
                style="@style/TitleTextStyle"
                android:text="@string/wlan_upgrade"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="50dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="60dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/rom_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/content_text_size"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/rom_info"
                        />
                    <TextView
                        android:id="@+id/tv_sys_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="@dimen/content_text_size_small1"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/sys_version"
                        />
                    <TextView
                        android:id="@+id/tv_mcu_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="@dimen/content_text_size_small1"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/mcu_version"
                        />
                    <TextView
                        android:id="@+id/tv_navi_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="@dimen/content_text_size_small1"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/navi_version"
                        />
                    <TextView
                        android:id="@+id/tv_voice_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="@dimen/content_text_size_small1"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/voice_version"
                        />
                    <TextView
                        android:id="@+id/tv_bt_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="@dimen/content_text_size_small1"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/bt_version"
                        />
                </LinearLayout>
            </FrameLayout>

            <include layout="@layout/settings_line_devide_v"/>

            <FrameLayout
                android:id="@+id/container_upgrade"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>