<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="85dp">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:paddingLeft="80dp"
        android:paddingRight="40dp"
        android:orientation="vertical"
        >
        <com.cdtsp.settings.view.SettingSwitchItem
            android:id="@+id/switch_hotspot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingBottom="15dp"
            app:title="@string/hotspot_switch"
            app:subtitle="@string/hotspot_portable"
            app:statusText="@string/openning"
            app:textSize="40dp"
            app:switchDrawable="@drawable/selector_switch_img"
            />

        <include layout="@layout/line_seperator"/>

        <RelativeLayout
            android:id="@+id/hotspot_set_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/local_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_text_size"
                android:textColor="@android:color/darker_gray"
                android:text="@string/hotspot_set"
                />
            <ImageView
                android:id="@+id/img_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/xitong_icon_more"
                />
        </RelativeLayout>

        <include layout="@layout/line_seperator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="150dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside"
            android:src="@drawable/xitong_wifi_bg"
            />

        <Button
            android:id="@+id/btn_wifi_switcher"
            style="@style/DialogButtonStyle"
            android:text="@string/networks"
            android:drawableLeft="@drawable/xitong_hot"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dp"
            />

    </LinearLayout>


</LinearLayout>